<resources>
    <string name="app_name">MyLibrary</string>
    <string name="activity_all_books">All Books</string>
    <string name="activity_book">Book Details</string>
    <string name="activity_already_read">Books You Already Read</string>
    <string name="activity_favorite_books">Favorite Books</string>
    <string name="activity_want_to_read">Your Wish List</string>
    <string name="activity_currently_reading">Boks You Are Currently Reading</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="rePassword">Retype Password</string>
    <string name="regFormError_firstName">Invalid First Name</string>
    <string name="regFormError_lastName">Invalid Last Name</string>
    <string name="regFormError_email">Invalid Email</string>
    <string name="regFormError_password">Password must be >5 characters</string>
    <string name="regFormError_rePassword">Not match</string>

    <string name="regFormValid">All Right</string>

</resources>